CHATS_SIT/force-app/main/default/objects/batchsit_t_indiv_dsblty_hist__x.object
<CustomObject>
    <description>batchsit$t_indiv_dsblty_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_indiv_dsblty_hist</externalName>
    <fields>
        <fullName>cde_income_dsblty_rcvng__c</fullName>
        <description>cde_income_dsblty_rcvng</description>
        <externalDeveloperName>cde_income_dsblty_rcvng</externalDeveloperName>
        <label>Disability Income receiving Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_length_dsblty__c</fullName>
        <description>cde_length_dsblty</description>
        <externalDeveloperName>cde_length_dsblty</externalDeveloperName>
        <label>Disability Code Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_level_spcl__c</fullName>
        <description>cde_level_spcl</description>
        <externalDeveloperName>cde_level_spcl</externalDeveloperName>
        <label>Special Level Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_ownrshp__c</fullName>
        <description>cde_ownrshp</description>
        <externalDeveloperName>cde_ownrshp</externalDeveloperName>
        <label>ownership code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_source_dsblty_child__c</fullName>
        <description>cde_source_dsblty_child</description>
        <externalDeveloperName>cde_source_dsblty_child</externalDeveloperName>
        <label>Disability Child Source Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_dsblty__c</fullName>
        <description>cde_type_dsblty</description>
        <externalDeveloperName>cde_type_dsblty</externalDeveloperName>
        <label>disability Type code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_verif__c</fullName>
        <description>cde_type_verif</description>
        <externalDeveloperName>cde_type_verif</externalDeveloperName>
        <label>Verification Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnt_age_dvlpl__c</fullName>
        <description>cnt_age_dvlpl</description>
        <externalDeveloperName>cnt_age_dvlpl</externalDeveloperName>
        <label>Age Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Disability_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_appln_income_dsblty__c</fullName>
        <description>dte_appln_income_dsblty</description>
        <externalDeveloperName>dte_appln_income_dsblty</externalDeveloperName>
        <label>Application Date Income Disability</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_begin_effv__c</fullName>
        <description>dte_begin_effv</description>
        <externalDeveloperName>dte_begin_effv</externalDeveloperName>
        <label>Incapacitation Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_created_hist__c</fullName>
        <description>dte_created_hist</description>
        <externalDeveloperName>dte_created_hist</externalDeveloperName>
        <label>History Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_due_review__c</fullName>
        <description>dte_due_review</description>
        <externalDeveloperName>dte_due_review</externalDeveloperName>
        <label>Review Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_end_effv__c</fullName>
        <description>dte_end_effv</description>
        <externalDeveloperName>dte_end_effv</externalDeveloperName>
        <label>Incapacitation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_rptd_change__c</fullName>
        <description>dte_rptd_change</description>
        <externalDeveloperName>dte_rptd_change</externalDeveloperName>
        <label>Change Reported Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_verif__c</fullName>
        <description>dte_verif</description>
        <externalDeveloperName>dte_verif</externalDeveloperName>
        <label>Verification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_case_vrfyng__c</fullName>
        <description>idn_case_vrfyng</description>
        <externalDeveloperName>idn_case_vrfyng</externalDeveloperName>
        <label>Case Verification ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_client__c</fullName>
        <description>idn_client</description>
        <externalDeveloperName>idn_client</externalDeveloperName>
        <label>Client ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_dsblty_indiv__c</fullName>
        <description>idn_dsblty_indiv</description>
        <externalDeveloperName>idn_dsblty_indiv</externalDeveloperName>
        <label>Incapacitation ID</label>
        <length>50</length>
        <referenceTargetField>T_INDIV_DSBLTY__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_INDIV_DSBLTY__c</referenceTo>
        <relationshipLabel>Disability Legacy History</relationshipLabel>
        <relationshipName>Disability_History</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_dsblty_indiv_hist__c</fullName>
        <description>idn_dsblty_indiv_hist</description>
        <externalDeveloperName>idn_dsblty_indiv_hist</externalDeveloperName>
        <label>Incapacitation ID History</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_vrfyng__c</fullName>
        <description>idn_user_vrfyng</description>
        <externalDeveloperName>idn_user_vrfyng</externalDeveloperName>
        <label>User Verification ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_cc_give_able__c</fullName>
        <description>ind_cc_give_able</description>
        <externalDeveloperName>ind_cc_give_able</externalDeveloperName>
        <label>Able to take care of children?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_curr__c</fullName>
        <description>ind_record_curr</description>
        <externalDeveloperName>ind_record_curr</externalDeveloperName>
        <label>current Record Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical Deleted Record</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_reqmt_work_meet_able__c</fullName>
        <description>ind_reqmt_work_meet_able</description>
        <externalDeveloperName>ind_reqmt_work_meet_able</externalDeveloperName>
        <label>Individual is able to meet the work req</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastmodifiedbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lastmodifiedbyid</description>
        <externalDeveloperName>lastmodifiedbyid</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Disability_History1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lastmodifieddate__c</fullName>
        <description>lastmodifieddate</description>
        <externalDeveloperName>lastmodifieddate</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nbr_seq_dsblty_indiv__c</fullName>
        <description>nbr_seq_dsblty_indiv</description>
        <externalDeveloperName>nbr_seq_dsblty_indiv</externalDeveloperName>
        <label>Disability Individual Number Sequence</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Disability History</label>
    <pluralLabel>Disability History</pluralLabel>
</CustomObject>